--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,6 @@ buildNumber.properties
 
 # End of https://www.gitignore.io/api/java,linux,macos,maven,intellij
 .attach*
+
+.java-version
+/slice/
